--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,10 @@ name: Sync tags from upstream
 on:
   workflow_dispatch:
 
+permissions:
+  contents: write 
+  workflows: write 
+
 jobs:
   sync:
     runs-on: ubuntu-latest
